Adicionando tags de href.

--- a/index.html
+++ b/index.html
@@ -219,13 +219,15 @@
             src="/assets/img/Ogilvy.png"
             onclick="logoOgilvyEnable()"
           />
+          <div id="logo-amaro"  class="logo-amaro">
           <img
-            id="logo-amaro"
+            
             alt="Logo Amaro"
-            class="logo-amaro"
+           
             src="/assets/img/Amaro.png"
             onclick="logoAmaroEnable()"
           />
+        </div>
         </div>
         <div id="sage-field">
           <div class="company-caption-section flex">
@@ -375,12 +377,12 @@
         </ul>
         <ul class="about-footer-list">
           <li class="list-title">Voxus</li>
-          <li class="list-tags">Sobre</li>
-          <li class="list-tags">Teste programática</li>
+          <li class="list-tags"><a href="https://voxus.com.br" target="_blank">Sobre</a></li>
+          <li class="list-tags"><a href="https://www.voxus.com.br/experimente.html" target="_blank">Teste programática</a></li>
         </ul>
         <ul class="contact-footer-list">
           <li class="list-title">Contato</li>
-          <li class="list-tags">admin@voxus.tv</li>
+          <li class="list-tags"><a href="mailto:admin@voxus.tv">admin@voxus.tv</a></li>
           <li class="list-tags address">
             Rua Cincinato Braga, 340 - Andar 152 São Paulo, SP
           </li>
@@ -399,16 +401,16 @@
         </h6>
         <div class="flex-center copyright-flex">
           <h6 class="copyright-thanks">Oferecimento:</h6>
-          <img
+          <a href="https://voxus.com.br" target="_blank"><img
             alt="Voxus Footer Logo"
             class="logo-footer-gray"
             src="/assets/img/voxus_grey.png"
-          />
-          <img
+          /></a>
+          <a href="https://www.ecommercebrasil.com.br/" target="_blank"><img
             alt="E-commerce Brasil Logo"
             class="ecbr-logo"
             src="/assets/img/logo-ecbr.png"
-          />
+          /></a>
         </div>
       </div>
     </footer>
